--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- Include the script that builds the page and powers Decap CMS -->
-  <script src="https://unpkg.com/@decap/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+  <script src="https://unpkg.com/@decap/decap-cms@^latest/dist/decap-cms.js"></script>
   
   <!-- Initialize Netlify Identity -->
   <script>
