--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -19,7 +19,8 @@
             document.location.href = "/admin/";
           });
         }
-      });
+      })
+       CMS.init();;
     }
   </script>
 </body>
