--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -1,20 +1,21 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Idaho Broadcasting Foundation - Content Editor</title>
-  <    <!-- Netlify Identity widget -->
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Idaho Broadcasting Foundation - Content Editor</title>
+    <!-- Netlify Identity widget -->
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
     <!-- Netlify CMS bundle -->
     <script src="https://unpkg.com/netlify-cms-app@^2.15.0/dist/netlify-cms-app.js"></script>
-
+  </head>
+  <body>
     <!-- Initialize CMS after scripts load -->
     <script>
       window.addEventListener('load', function () {
         if (window.netlifyIdentity) {
-          window.netlifyIdentity.on('init', user => {
+          window.netlifyIdentity.on('init', (user) => {
             if (!user) {
               window.netlifyIdentity.on('login', () => {
                 document.location.href = '/admin/';
@@ -26,6 +27,6 @@
           window.NetlifyCms.init();
         }
       });
-    </script>pt>
-</body>
+    </script>
+  </body>
 </html>
