--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -4,29 +4,19 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Idaho Broadcasting Foundation - Content Editor</title>
-    <!-- Netlify Identity widget -->
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-
-    <!-- Netlify CMS bundle -->
+    <script>
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on('init', (user) => {
+          if (!user) {
+            window.netlifyIdentity.on('login', () => {
+              document.location.href = '/admin/';
+            });
+          }
+        });
+      }
+    </script>
     <script src="https://unpkg.com/netlify-cms-app@^2.15.0/dist/netlify-cms-app.js"></script>
   </head>
-  <body>
-    <!-- Initialize CMS after scripts load -->
-    <script>
-      window.addEventListener('load', function () {
-        if (window.netlifyIdentity) {
-          window.netlifyIdentity.on('init', (user) => {
-            if (!user) {
-              window.netlifyIdentity.on('login', () => {
-                document.location.href = '/admin/';
-              });
-            }
-          });
-        }
-        if (window.NetlifyCms) {
-          window.NetlifyCms.init();
-        }
-      });
-    </script>
-  </body>
+  <body></body>
 </html>
