--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -16,7 +16,7 @@
         });
       }
     </script>
-    <script src="https://unpkg.com/netlify-cms-app@^2.15.0/dist/netlify-cms-app.js"></script>
+    <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
   </head>
   <body></body>
 </html>
