--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -8,7 +8,7 @@
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
     <!-- Netlify CMS bundle -->
-    <script src="https://unpkg.com/netlify-cms-app@^2.15.0/dist/netlify-cms-app.js"></script>
+    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
 
     <!-- Initialize CMS after scripts load -->
     <script>
