--- a/editor/index.html
+++ b/editor/index.html
@@ -1,19 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Visual Editor</title>
-    <script async src="https://create.netlify.com/init.js"></script>
-    <script>
-      window.addEventListener('load', () => {
-        if (window.netlifyCreate) {
-          window.netlifyCreate.open();
-        }
-      });
-    </script>
+    <meta charset="utf-8" />
+    <title>Content Manager</title>
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <script src="https://unpkg.com/netlify-cms-app@^2.0.0/dist/netlify-cms-app.js"></script>
   </head>
   <body>
-    <p>Loading Visual Editor…</p>
+    <script>
+      CMS.init();
+    </script>
   </body>
 </html>
