--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -8,7 +8,14 @@
   </head>
   <body>
     <script>
-      NetlifyCms.init();
-    </script>
+     window.CMS_MANUAL_INIT = true;
+(function () {
+  var cms = window.CMS || window.NetlifyCms;
+  if (cms) {
+    cms.init({ config: '/editor/config.yml' });
+  } else {
+    console.error('Netlify CMS global not found.');
+  }
+})();/script>
   </body>
 </html>
