--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -7,15 +7,5 @@
     <script src="https://unpkg.com/netlify-cms-app@^2.0.0/dist/netlify-cms-app.js"></script>
   </head>
   <body>
-    <script>
-     window.CMS_MANUAL_INIT = true;
-(function () {
-  var cms = window.CMS || window.NetlifyCms;
-  if (cms) {
-    cms.init({ config: '/editor/config.yml' });
-  } else {
-    console.error('Netlify CMS global not found.');
-  }
-})();/script>
-  </body>
+    <<script src="/editor/init.js"></script>
 </html>
