--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -7,5 +7,6 @@
     <script src="https://unpkg.com/netlify-cms-app@^2.0.0/dist/netlify-cms-app.js"></script>
   </head>
   <body>
-    <<script src="/editor/init.js"></script>
+    <script src="/editor/init.js"></script>
+  </body>
 </html>
