--- a/admin/index.html
+++ b/admin/index.html
@@ -4,11 +4,17 @@
     <meta charset="utf-8" />
     <title>Content Manager</title>
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-    <script src="https://unpkg.com/netlify-cms-app@^2.0.0/dist/netlify-cms-app.js"></script>
-  </head>
-  <body>
-    <script>
-      NetlifyCms.init();
-    </script>
-  </body>
+  <script src="https://unpkg.com/netlify-cms-app@^2.15.0/dist/netlify-cms-app.js"></script>
+
+  <script>
+    window.addEventListener('load', function () {
+      var cms = window.CMS || window.NetlifyCmsApp || window.NetlifyCms;
+      if (cms && cms.init) {
+        cms.init();
+      }
+    });
+  </script>
+</head>
+<body>
+</body>
 </html>
