--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Idaho Broadcasting Foundation - Content Editor</title>
-  <    <!-- Netlify Identity widget -->
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <!-- Netlify Identity widget -->
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
     <!-- Netlify CMS bundle -->
     <script src="https://unpkg.com/netlify-cms-app@^2.15.0/dist/netlify-cms-app.js"></script>
@@ -22,10 +22,13 @@
             }
           });
         }
-        if (window.NetlifyCms) {
-          window.NetlifyCms.init();
+        var cms = window.CMS || window.NetlifyCmsApp || window.NetlifyCms;
+        if (cms && cms.init) {
+          cms.init();
         }
       });
-    </script>pt>
+  </script>
+</head>
+<body>
 </body>
 </html>
