--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Idaho Broadcasting Foundation - Content Editor</title>
+  <script src="https://unpkg.com/react@^17.0.0/umd/react.production.min.js"></script>
+  <script src="https://unpkg.com/react-dom@^17.0.0/umd/react-dom.production.min.js"></script>
   <!-- Netlify Identity widget -->
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
