--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Content Manager</title>
+    <script src="https://unpkg.com/react@^17.0.0/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom@^17.0.0/umd/react-dom.production.min.js"></script>
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script src="https://unpkg.com/netlify-cms-app@^2.0.0/dist/netlify-cms-app.js"></script>
   </head>
