--- a/public/editor/index.html
+++ b/public/editor/index.html
@@ -6,7 +6,7 @@
     <script src="https://unpkg.com/react@^17.0.0/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@^17.0.0/umd/react-dom.production.min.js"></script>
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-    <script src="https://unpkg.com/netlify-cms-app@^2.0.0/dist/netlify-cms-app.js"></script>
+    <script src="https://unpkg.com/decap-cms-app@^3.0.0/dist/decap-cms-app.js"></script>
   </head>
   <body>
     <script src="/editor/init.js"></script>
